--- a/arxivtimes_indicator/server/static/css/index.css
+++ b/arxivtimes_indicator/server/static/css/index.css
@@ -1,5 +1,6 @@
 .title.top{
-    background-color:#24292e; 
-    color:white;
+    color: slategray;
     padding: 7px 0px 7px 15px;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
 }
