--- a/arxivtimes_indicator/server/templates/index.html
+++ b/arxivtimes_indicator/server/templates/index.html
@@ -85,7 +85,7 @@
         <div class="media-content">
           <div class="content">
             <p>
-              <a v-bind:href="[[paper.url]]"><strong>[[paper.title]]</strong></a>
+              <a v-bind:href="[[paper.url]]" target="_paper" style="font-size:1.1em">[[paper.title]]</a>
               <br>
               <span>
               [[paper.headline | makeHeadline]]
