--- a/arxivtimes_indicator/server/static/css/index.css
+++ b/arxivtimes_indicator/server/static/css/index.css
@@ -4,3 +4,37 @@
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
 }
+
+[v-cloak] {
+  display: none;
+}
+
+.user-icon{
+    width:20px;
+    height:20px;
+    display:inline-block;
+    vertical-align:middle;
+    border-radius:.2em;
+}
+
+meter{
+    background: whitesmoke;
+    width: 64px;
+    height: 64px;    
+}
+
+meter::-webkit-meter-bar {
+    background: whitesmoke;
+    width: 64px;
+    height: 64px;
+}
+
+meter::-webkit-meter-optimum-value {
+    background: linear-gradient(to bottom, #62c462, #51a351);
+}
+meter::-webkit-meter-suboptimum-value {
+    background: linear-gradient(to bottom, #fbb450, #f89406);
+}
+meter::-webkit-meter-even-less-good-value {
+    background: linear-gradient(to bottom, #ee5f5b, #bd362f);
+}
