implements individual page

--- a/arxivtimes_indicator/server/templates/base.html
+++ b/arxivtimes_indicator/server/templates/base.html
@@ -17,7 +17,7 @@
     <div class="hero-head">
     <nav class="nav">
         <div class="nav-left">
-            <a class="nav-item">
+            <a class="nav-item" href="/">
                 <img src="{{ static_url('images/arXivTimesLogo.PNG') }}" alt="arXivTimes logo">
             </a>
         </div>
