--- a/arxivtimes_indicator/server/templates/user.html
+++ b/arxivtimes_indicator/server/templates/user.html
@@ -69,9 +69,9 @@
 
 <div class="container content-area">
   <div class="columns">
-    {% for kind in ("recent", "popular") %}
+    {% for kind in ("recent", "quality") %}
       <div class="column is-half">
-        <h3 class="title is-3">{{ "Recent" if kind == "recent" else "Popular" }}</h3>
+        <h3 class="title is-3">{{ "Recent" if kind == "recent" else "Quality" }}</h3>
         {% for p in posts[kind] %}
         <article class="media">
           <figure class="media-left is-hidden-mobile">
