--- a/arxivtimes_indicator/server/templates/base.html
+++ b/arxivtimes_indicator/server/templates/base.html
@@ -55,8 +55,8 @@
             <a class="nav-item" href="/">
                 Home
             </a>
-            <a class="nav-item">
-                Statistics
+            <a class="nav-item" href="https://medium.com/@arxivtimes/arxivtimes%E3%81%AE%E3%83%80%E3%83%83%E3%82%B7%E3%83%A5%E3%83%9C%E3%83%BC%E3%83%89%E3%82%92%E3%83%AA%E3%83%AA%E3%83%BC%E3%82%B9%E3%81%97%E3%81%BE%E3%81%97%E3%81%9F-4f2f7190b7e8" target="_guide">
+                About
             </a>
         </div>
     </nav>
